// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PerformanceMetricCard - Snapshots deve corresponder ao snapshot com tendência down 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
  >
    <div
      class="tracking-tight text-sm font-medium"
    >
      Ciclo de Vendas
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="text-2xl font-bold"
    >
      35 dias
    </div>
    <div
      class="flex items-center gap-1 mt-2 text-xs"
    >
      <span>
        %
      </span>
      <span
        class="text-muted-foreground ml-1"
      >
        vs. período anterior
      </span>
    </div>
  </div>
</div>
`;

exports[`PerformanceMetricCard - Snapshots deve corresponder ao snapshot com tendência up 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="p-6 flex flex-row items-center justify-between space-y-0 pb-2"
  >
    <div
      class="tracking-tight text-sm font-medium"
    >
      Win Rate
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="text-2xl font-bold"
    >
      75%
    </div>
    <div
      class="flex items-center gap-1 mt-2 text-xs"
    >
      <span>
        %
      </span>
      <span
        class="text-muted-foreground ml-1"
      >
        vs. período anterior
      </span>
    </div>
  </div>
</div>
`;
